# Automating-Email-Workflow

./: .env.example  pyproject.toml  pytest.ini  readme-Email Processing Flowchart-1.eraserdiagram  readme.md  rules.json
gmail_rules_engine/: .env.example  actions.py  auth.py  email_fetcher.py  main.py  rule_engine.py  rules.json
gmail_rules_engine/db/: manager.py  models.py
gmail_rules_engine/utils/: helpers.py
test/: test_rule_engine.py
